// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render an expense and its total 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $50.40
  </p>
</div>
`;

exports[`Should render expenses and their total 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $123.12
  </p>
</div>
`;

exports[`Should render no expense to view message 1`] = `
<div>
  <p>
    No expenses to view
  </p>
</div>
`;
